[package]
name = "market_matcher_rs"
version = "0.1.0"
authors = ["White-Oak <lpzhelud@gmail.com>"]
edition = "2018"

[lib]
name = "market_matcher"
bench = false

[[bin]]
name = "market_matcher"
path = "src/main.rs"
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "matcher_benchmark"
harness = false
